--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
 	"dependencies": {
 		"@astrojs/check": "^0.4.1",
 		"astro": "^4.1.3",
+		"jquery": "^3.7.1",
 		"modern-normalize": "^2.0.0",
-		"typescript": "^5.3.3",
-		"png-js": "^1.0.0"
+		"png-js": "^1.0.0",
+		"typescript": "^5.3.3"
 	}
 }
